automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,11 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'population'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "greenville_population = \"population\" # \n",
+    "greenville_population = \"population\" # 84554\n",
     "greenville_population # 84554"
    ]
   },
