--- a/index.ipynb
+++ b/index.ipynb
@@ -78,22 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['population']"
+       "'population'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_population = [\"population\"] # 84554\n",
+    "greenville_population = \"population\" # 84554\n",
     "greenville_population"
    ]
   },
