--- a/index.ipynb
+++ b/index.ipynb
@@ -106,11 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'area'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "greenville_area = \n",
+    "greenville_area = 'area' \n",
     "greenville_area # 68"
    ]
   },
