--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +115,13 @@
        "'area'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_area = 'area' \n",
+    "greenville_area = 'area' # 68\n",
     "greenville_area # 68"
    ]
   },
