--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "greenville_population = {'Population'}\n",
+    "greenville_population = {'Population':\"\"}\n",
     "greenville_population"
    ]
   },
