automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,22 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Population': '84554'}"
+       "'84554'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_population = {'Population':\"84554\"}\n",
+    "greenville_population = \"84554\"\n",
     "greenville_population"
    ]
   },
@@ -106,22 +106,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'area'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-665cd6f21d64>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-665cd6f21d64>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    greenville_area =  # 68\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "greenville_area = 'area' # 68\n",
+    "greenville_area =  # 68\n",
     "greenville_area # 68"
    ]
   },
