--- a/index.ipynb
+++ b/index.ipynb
@@ -134,22 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "68"
+       "'84554'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_area"
+    "greenville_population"
    ]
   },
   {
