automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "city_keys = list\n",
+    "city_keys = list(cities[0].keys)\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
