automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     }
    ],
    "source": [
-    "city_keys = list(cities[0].keys())\n",
+    "city_keys = keys(\"\")\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
