--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     }
    ],
    "source": [
-    "city_keys = keys('Area','City',)\n",
+    "city_keys = keys('Area','City', 'Country', 'Population')\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
