--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -163,13 +163,13 @@
        "('Area', 'City', 'Country', 'Population')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_keys = ('Area','City', 'Country', 'Population')\n",
+    "city_keys = ('Area','City', 'Country', 'Population'\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
