--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_values = list\n",
+    "city_values = city_values\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
