--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "city_values = \n",
+    "city_values = (68)\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
