automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "city_values = (68, 'Greenville', '')\n",
+    "city_values = (68, 'Greenville', 'USA', (845))\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
