--- a/index.ipynb
+++ b/index.ipynb
@@ -182,20 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-a1f12a8aba4e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-a1f12a8aba4e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    city_values =\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(68, 'Greenville', 'USA', 84554)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_values = (68, 'Greenville', 'USA', (845))\n",
+    "city_values = (68, 'Greenville', 'USA', (84554))\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
