automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -339,11 +339,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salina = N\n",
+    "salina =  {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}\n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
