automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -361,10 +361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salina"
+   ]
   },
   {
    "cell_type": "markdown",
