--- a/index.ipynb
+++ b/index.ipynb
@@ -388,22 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Population'"
+       "287651"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = \n",
+    "los_cabos_pop = 287651\n",
     "los_cabos_pop # 287651"
    ]
   },
