--- a/index.ipynb
+++ b/index.ipynb
@@ -466,11 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-46-0f4dc91fe510>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-0f4dc91fe510>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    cities[11]['City'] = PyeongChang''\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "cities[11]['City'] = Pyeong\n",
+    "cities[11]['City'] = PyeongChang''\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
