--- a/index.ipynb
+++ b/index.ipynb
@@ -507,8 +507,8 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities[11]\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
+    "pyeongchang_values = \n",
+    "pyeongchang_values # \n",
     "type(pyeongchang_values) # list"
    ]
   },
