--- a/index.ipynb
+++ b/index.ipynb
@@ -494,22 +494,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-52-cc1422b0200e>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-52-cc1422b0200e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = \n",
+    "pyeongchang_values = ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "pyeongchang_values # \n",
-    "type(pyeongchang_values) # list"
+    "type(pyeongchang_values) "
    ]
   },
   {
