automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -494,16 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['PyeongChang', 'South Korea', 2581000, 3194]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
    "source": [
     "pyeongchang_values = ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "pyeongchang_values # \n",
-    "type(pyeongchang_values) "
+    "list(pyeongchang_values) "
    ]
   },
   {
