--- a/index.ipynb
+++ b/index.ipynb
@@ -527,10 +527,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = ['City', 'Country', 'Population', 'Area']\n",
     "\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
+    "pyeongchang_keys # \n",
     "type(pyeongchang_keys) # list"
    ]
   },
