--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,7 @@
     "\n",
     "\n",
     "pyeongchang_keys # \n",
-    "type(pyeongchang_keys) # list"
+    "typ(pyeongchang_keys) # list"
    ]
   },
   {
