--- a/index.ipynb
+++ b/index.ipynb
@@ -523,15 +523,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['City', 'Country', 'Population', 'Area']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_keys = ['City', 'Country', 'Population', 'Area']\n",
     "\n",
     "\n",
     "pyeongchang_keys # \n",
-    "typ(pyeongchang_keys) # list"
+    "list(pyeongchang_keys) # list"
    ]
   },
   {
